--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Dasmoto Arts</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Dasmoto's Arts & Crafts</title>
+  </head>
+  <body>
+<h1>Dasmoto's Arts & Crafts</h1>
+<h2>Brushes</h2>
+<img src="" alt="">
+<h3>Hacksaw Brushes</h3>
+<h4>Made of the highest quality oak. Hacksaw Brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <strong></strong>Starting at $3.00 / brush</h4></strong></h4>
+
+<h2>Frames</h2>
+<img src="" alt="">
+<h3>Art Frames (assorted)</h3>
+<h4>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <strong></strong>Starting at $2.00 / frame</h4></strong></h4>
+
+<h2>Paint</h2>
+<img src="" alt="">
+<h3>Clean Finnish Paint</h3>
+<h4>Imported paint from Finland. Over 256 colors available in-store, varying in quantity. (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <strong></strong>Starting at $5.00 / tube</h4></strong></h4>
+
+  </body>
 </html>
